apply allianceflip for closest poses